tests/src/frontend/typechecking/invalid/whenparam_inherit4.sk
base class P {
  children =
  | C()
}

base class Foo<T> {
  fun foo[T: C](): T;
}

class Bar<T>() extends Foo<T> {
  fun foo[T: P](): T {
    C()
  }
}
